test/libsolidity/syntaxTests/parsing/constant_is_keyword.sol
contract Foo {
	uint const = 4;
}
// ----
// ParserError: (30-31): Expected identifier but got '='
